heroku stand alone application - disable jetty